--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Pollution Solutions!</h1>
+        <h1>Pollution Solutions.</h1>
         <p>This website is dedicated to stopping pollution from destroying our beautiful planet.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="second.html" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
 
