--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-md-4">
           <h2>What is pollution?</h2>
           <p>Click here to learn about pollution and see how it can effect our earth. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="aboutpollution.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Different types of pollution.</h2>
