--- a/typesofpollution.html
+++ b/typesofpollution.html
@@ -42,19 +42,17 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2 style="color: blue">What is pollution?</h2>
+          <h2>What is pollution?</h2>
           <p>Click here to learn about pollution and see how it can effect our earth. </p>
           <p><a class="btn btn-default" href="aboutpollution.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Different types of pollution.</h2>
-          <p>Click here to learn about the different types of pollution.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+         <p>There are three msin types of </p>
+          <p><a class="btn btn-default" href="index.html" role="button">Go back &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>How can you help?</h2>
-          <p>Click here to ssee how you can help to stop pollution.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          
           
         </div>
         </div>
