--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>What is pollution?</h2>
+          <h2>The Problem</h2>
           <p>Click here to learn about pollution and see how it can effect our earth. </p>
           <p><a class="btn btn-default" href="aboutpollution.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Different types of pollution.</h2>
+          <h2>The Variable</h2>
           <p>Click here to learn about the different types of pollution.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
