--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="jumbotron">
       <div class="container">
          
-       <title> Pollution Solution </title>
+     <h1> Pollution Solution </h1>
        
         <p>Divide and Conquer.</p>
         <p><a class="btn btn-primary btn-lg" href="second.html" role="button">Learn more &raquo;</a></p>
