--- a/typesofpollution.html
+++ b/typesofpollution.html
@@ -48,7 +48,15 @@
         </div>
         <div class="col-md-4">
           <h2>Different types of pollution.</h2>
-         <p>There are three msin types of </p>
+         <p>There are seven main types of pollution: air pollution, land pollution, light pollution, water pollution.
+             <ol>Air Pollution</ol>
+             <p> Air pollution is releasing poisonous gases into the air, which can cause the ozone layer to disappear if we do not do something about it.</p>
+             <ol>Land Pollution</ol>
+             <p>Land pollution causes parts of the usuable soil to become unusual due to poisonous and harmful chemicals. This can greately affect the human population, along with the animal species and the plant species due to not being able to use soil for planting. </p>
+             <ol> Water Pollution </ol>
+                 <p>Water pollution, like land pollution, causes parts of the water to become unusuable/undrinkable due to the water being poisonous to health. This can become a very serious problem soon if we do not fix it now because the world would become void of drinkable water.</p>
+            
+         </p>
           <p><a class="btn btn-default" href="index.html" role="button">Go back &raquo;</a></p>
        </div>
         <div class="col-md-4">
