--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="col-md-4">
           <h2>The Variable</h2>
           <p>Click here to learn about the different types of pollution.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="typesofpollution.html" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Our Solutions
