--- a/aboutpollution.html
+++ b/aboutpollution.html
@@ -33,7 +33,7 @@
         <h2>What is pollution?</h2>
         <p>Pollution is a negative introduction to the enviorment, where it is introduced to harmful or poisonous chemicals and other material.</p>
         <h2> What is poisonous or dangerous to the enviorment?</h2>
-        <p>Things that are poisonous or dangerous to the enviorment include
+        <p>Things that are poisonous or dangerous to the enviorment include, but are not limited to: aluminum, perscription drugs, pesticides, heavy metals, and radioactivity. </p>
             
             
             <h2> What can it do to our earth?</h2>
