--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h2>Our Solutions
           </h2>
           <p>Click here to ssee how you can help to stop pollution.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="whatwecando.html" role="button">View details &raquo;</a></p>
           
         </div>
         </div>
