--- a/whatwecando.html
+++ b/whatwecando.html
@@ -44,11 +44,11 @@
             <p> While it may seem impossible to fix these solutions, there are some things <b>you</b> can do.
             <ol><li> Recycle!</ol></li>
             Something as simple as recycling paper, plastic, and other recyclables can greatly reduce the amount of landfills by almost 50%! So the next time you think about throwing away a plastic bottle, throw it in a recycling bin!
-            <ol><li>Reduce how much you throw away.</ol></li>
+            <li>Reduce how much you throw away.</li>
             <p>Same as recycling, reusing usuable things -such as a carton of milk for a flowering pot, or using a pair of old pants to make shoes- can really bring down the amount of landfill waste by almost 50%!
-                <ol><li>Give away, don't throw away!</ol></li>
+                <li>Give away, don't throw away!</li>
                 <p>Have something you can't fit anymore, but have no idea what to do with it? Drop the clothing off at a local donations building, where they give clothing away to people in need of new clothing. Not only are you giving that clothing a new purpose, you're also reducing the amount of trash in the landfills, and you're helping out. Good on you for that!
-                    <ol><li>Buy things made from recycled items.</ol></li>
+                    <li>Buy things made from recycled items.</li>
                     <p> According to www3.epa.gov, buying recycled items sends a message to industries telling them that recyclable items are in demand. This helps to keep recyclable items out of landfills by giving them a new life, and it also reduces the amount of greenhouse gases produced by landfills by more than 50%.
          
           <p><a class="btn btn-default" href="index.html" role="button">Go Back &raquo;</a></p>
