--- a/mainpage.html
+++ b/mainpage.html
@@ -21,12 +21,12 @@
      <div id="header">
 
       <!-- Logo -->
-       <h1><a href="index.html">Pollution Solution</a></h1>
+       <h1><a href="#">Pollution Solution</a></h1>
 
       <!-- Nav -->
        <nav id="nav">
         <ul>
-         <li class="current"><a href="index.html">Home</a></li>
+         <li class="current"><a href="mainpage.html">Home</a></li>
          <li>
           <a href="#">Menu</a>
           <ul>
@@ -76,18 +76,18 @@
           <section class="middle">
            <i class="icon featured alt fa-flash"></i>
            <header>
-            <h2>Magna etiam dolor</h2>
+            <h2>The Variables</h2>
            </header>
-           <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+           <p>Click here to learn about the different types of pollution.</p>
           </section>
          </div>
          <div class="4u 12u(mobile)">
           <section class="last">
            <i class="icon featured alt2 fa-star"></i>
            <header>
-            <h2>Tempus adipiscing</h2>
+            <h2>The Solution</h2>
            </header>
-           <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+           <p>Click here t learn how you can help to stop world pollution.</p>
           </section>
          </div>
         </div>
