--- a/whatwecando.html
+++ b/whatwecando.html
@@ -50,7 +50,7 @@
                 <p>Have something you can't fit anymore, but have no idea what to do with it? Drop the clothing off at a local donations building, where they give clothing away to people in need of new clothing. Not only are you giving that clothing a new purpose, you're also reducing the amount of trash in the landfills, and you're helping out. Good on you for that!
                     <li>Buy things made from recycled items.</li>
                     <p> According to www3.epa.gov, buying recycled items sends a message to industries telling them that recyclable items are in demand. This helps to keep recyclable items out of landfills by giving them a new life, and it also reduces the amount of greenhouse gases produced by landfills by more than 50%.
-                        <li>Planting more trees></li>
+                        <li>Planting more trees</li>
                         <p>Planting trees can help remove dangerous chemicals in the air, and in exchange can give us clean oxygen in the air.</p> 
          
           <p><a class="btn btn-default" href="mainpage.html" role="button">Go Back &raquo;</a></p>
