--- a/mainpage.html
+++ b/mainpage.html
@@ -69,7 +69,7 @@
            <header>
             <h2>The Problem</h2>
            </header>
-           <p>.</p>
+           <p>Click here to learn about pollution.</p>
           </section>
          </div>
          <div class="4u 12u(mobile)">
@@ -78,7 +78,7 @@
            <header>
             <h2>The Variables</h2>
            </header>
-           <p>Click here to learn about the different types of pollution.</p>
+           <p>Click here to learn about the different types of pollution and how it affects the world.</p>
           </section>
          </div>
          <div class="4u 12u(mobile)">
@@ -87,7 +87,7 @@
            <header>
             <h2>The Solution</h2>
            </header>
-           <p>Click here t learn how you can help to stop world pollution.</p>
+           <p>Click here to learn how you can help to stop world pollution.</p>
           </section>
          </div>
         </div>
@@ -343,16 +343,12 @@
          </ul>
          <ul class="contact">
           <li>
-           <h3>Address</h3>
-           <p>
-            Untitled Incorporated<br />
-            1234 Somewhere Road Suite<br />
-            Nashville, TN 00000-0000
+        
            </p>
           </li>
           <li>
            <h3>Mail</h3>
-           <p><a href="#">someone@untitled.tld</a></p>
+           <p><a href="#">martinique831@yahoo.com</a></p>
           </li>
           <li>
            <h3>Phone</h3>
