--- a/typesofpollution.html
+++ b/typesofpollution.html
@@ -43,7 +43,7 @@
                  <p>Water pollution, like land pollution, causes parts of the water to become unusuable/undrinkable due to the water being poisonous to health. This can become a very serious problem soon if we do not fix it now because the world would become void of drinkable water.</p>
             
          </p>
-          <p><a class="btn btn-default" href="mainpage.html" role="button">Go back &raquo;</a></p>
+          <p><a class="btn btn-default" href="index.html" role="button">Go back &raquo;</a></p>
        </div>
         <div class="col-md-4">
           
