--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           <p><a class="btn btn-default" href="typesofpollution.html" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Our Solutions
-          </h2>
+          <h2>Our Solutions</h2>
           <p>Click here to see how you can help to stop pollution.</p>
           <p><a class="btn btn-default" href="whatwecando.html" role="button">View details &raquo;</a></p>
           
