--- a/mainpage.html
+++ b/mainpage.html
@@ -46,16 +46,16 @@
            <li><a href="#">Veroeros feugiat</a></li>
           </ul>
          </li>
-         <li><a href="left-sidebar.html">Left Sidebar</a></li>
-         <li><a href="right-sidebar.html">Right Sidebar</a></li>
-         <li><a href="no-sidebar.html">No Sidebar</a></li>
+         <li><a href="aboutpollution.html">What is pollution?</a></li>
+         <li><a href="typesofpollutions.html">The types of pollution.</a></li>
+         <li><a href="whatwecando.html">Learn how yiou can stop pollution.</a></li>
         </ul>
        </nav>
 
       <!-- Banner -->
        <section id="banner">
         <header>
-         <h2>Pollution Sollutions.</h2>
+         <h1>Pollution Sollutions.</h1>
          <p> It All Adds Up</p>
         </header>
        </section>
