--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         <div class="col-md-4">
           <h2>The Problem</h2>
           <p>Click here to learn about pollution and see how it can effect our earth. </p>
-          <p><a class="btn btn-default" href="aboutpollution.html" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="aboutpollution.html" role="button">See More &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>The Variable</h2>
           <p>Click here to learn about the different types of pollution.</p>
-          <p><a class="btn btn-default" href="typesofpollution.html" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="typesofpollution.html" role="button">See More &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Our Solutions</h2>
           <p>Click here to see how you can help to stop pollution.</p>
-          <p><a class="btn btn-default" href="whatwecando.html" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="whatwecando.html" role="button">See More &raquo;</a></p>
           
         </div>
         </div>
