--- a/whatwecando.html
+++ b/whatwecando.html
@@ -43,7 +43,7 @@
             <h2>What can we do?</h2>
             <p> While it may seem impossible to fix these solutions, there are some things <b>you</b> can do.
             <ol><li> Recycle!</ol></li>
-            Something as simple as recycling paper, plastic, and other recyclables can greatly reduce the amount of landfills by almost 50%! So the next time you think about throwing away a plastic bottle, throw it in a recycling bin!
+            <p>Something as simple as recycling paper, plastic, and other recyclables can greatly reduce the amount of landfills by almost 50%! So the next time you think about throwing away a plastic bottle, throw it in a recycling bin!</p>
             <li>Reduce how much you throw away.</li>
             <p>Same as recycling, reusing usuable things -such as a carton of milk for a flowering pot, or using a pair of old pants to make shoes- can really bring down the amount of landfill waste by almost 50%!
                 <li>Give away, don't throw away!</li>
