--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>The Problem</h2>
-          <p>Click here to learn about pollution and see how it can effect our earth. </p>
+          <p>Click here to learn about pollution and see how it can affect our earth. </p>
           <p><a class="btn btn-default" href="aboutpollution.html" role="button">See More &raquo;</a></p>
         </div>
         <div class="col-md-4">
