--- a/aboutpollution.html
+++ b/aboutpollution.html
@@ -30,11 +30,12 @@
         <h2>What is pollution?</h2>
         <p>Pollution is a negative introduction to the enviorment, where it is introduced to harmful or poisonous chemicals and other materials.</p>
         <h2> What is poisonous or dangerous to the enviorment?</h2>
-        <p>Things that are poisonous or dangerous to the enviorment includes, but are not limited to: 
-            <ol><li>aluminum 
-                perscription drugs 
-                   pesticides heavy metals and 
-                   radioactivity. </p>
+        <ul><li>Things that are poisonous or dangerous to the enviorment includes, but are not limited to: 
+            <li>aluminum 
+             <li>perscription drugs 
+            <li>pesticides 
+                <li>heavy metals and 
+                   <li>radioactivity. </li></ul>
             
             
             <h2> What can it do to our earth?</h2>
