--- a/typesofpollution.html
+++ b/typesofpollution.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-4">
           <h1>Different types of pollution.</h1>
-         <p>There are five main types of pollution: air pollution, land pollution, light pollution, water pollution.
+         <p>There are five main types of pollution: air pollution, land pollution, light pollution, water pollution, and noise pollution.
            <h2>  <ol>Air Pollution</ol> </h2>
              <p> Air pollution is releasing poisonous gases into the air, which can cause the ozone layer to disappear if we do not do something about it.</p>
             <h2> <ol>Land Pollution</ol> </h2>
