--- a/whatwecando.html
+++ b/whatwecando.html
@@ -38,11 +38,11 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
             
             <h2>What can we do?</h2>
             <p> While it may seem impossible to fix these solutions, there are some things <b>you</b> can do.
-            <ul><li> Recycle!</ul></li>
+            <h2><ul><li> Recycle!</ul></li>
             <p>Something as simple as recycling paper, plastic, and other recyclables can greatly reduce the amount of landfills by almost 50%! So the next time you think about throwing away a plastic bottle, throw it in a recycling bin!<p>
             <li>Reduce how much you throw away.</li>
             <p>Same as recycling, reusing usuable things -such as a carton of milk for a flowering pot, or using a pair of old pants to make shoes- can really bring down the amount of landfill waste by almost 50%!
