--- a/whatwecando.html
+++ b/whatwecando.html
@@ -41,7 +41,7 @@
         <div class="col-md-9">
             
             <h2>What can we do?</h2>
-            <p> While it may seem impossible to fix these solutions, there are some things <b>you</b> can do.
+            <h4> While it may seem impossible to fix these solutions, there are some things <b>you</b> can do.</h4>
             <h2><ul><li> Recycle!</ul></li></h2>
             <p>Something as simple as recycling paper, plastic, and other recyclables can greatly reduce the amount of landfills by almost 50%! So the next time you think about throwing away a plastic bottle, throw it in a recycling bin!<p>
             <li>Reduce how much you throw away.</li>
