--- a/aboutpollution.html
+++ b/aboutpollution.html
@@ -30,8 +30,8 @@
         <h2>What is pollution?</h2>
         <p>Pollution is a negative introduction to the enviorment, where it is introduced to harmful or poisonous chemicals and other materials.</p>
         <h2> What is poisonous or dangerous to the enviorment?</h2>
-        <ul><li>Things that are poisonous or dangerous to the enviorment includes, but are not limited to: 
-            <li>aluminum 
+        <p>Things that are poisonous or dangerous to the enviorment includes, but are not limited to: </p>
+           <ul> <li>aluminum 
              <li>perscription drugs 
             <li>pesticides 
                 <li>heavy metals and 
