--- a/typesofpollution.html
+++ b/typesofpollution.html
@@ -38,13 +38,13 @@
            <h2>  <ol>Air Pollution</ol> </h2>
              <p> Air pollution is releasing poisonous gases into the air, which can cause the ozone layer to disappear if we do not do something about it. This is important because if the ozone layer disappears, dangerous solar ultraviolet (UV) rays to enter the atmostphere. This will greately increase the chance of getting skin cancer, and cause the skin to burn from the rays.</p>
             <h2> <ol>Land Pollution</ol> </h2>
-             <p>Land pollution causes parts of the usuable soil to become unusual due to poisonous and harmful chemicals. This can greately affect the human pLand can become polluted by household garbage and by industrial waste. In 2010, Americans produced about 250 million tons (226.8 million kilograms) of garbage, consisting of product packaging, grass clippings, furniture, clothing, bottles, food scraps, newspapers, appliances, paint and batteries. That's about 4.3 pounds (1.95 kg) of waste per person per day, according to the Environmental Protection Agency (EPA). A little over half of the waste — 54 percent — is gathered in landfills. Only about 34 percent is recycled, which is about double the amount recycled in 1980, according to the American Society of Civil Engineers.  opulation, along with the animal species and the plant species due to not being able to use soil for planting. </p>
+             <p>Land pollution causes parts of the usuable soil to become unusual due to poisonous and harmful chemicals. This can greately affect . </p>
              <h2><ol>Light Pollution</h2></ol>
              <p>Light pollution may not affect humans, but it affects nature. Light pollution is caused by placing many street lamps without the cone-shape, causing the natural hours to become disoriented. Some effects of light pollution include birds singing at unusual hours, plant's natural develpoement to become off-track, sea turtles -who use the starlight to go into the ocean-to go the wrong way, towards the sreetlights.
              <h2> <ol> Noise Pollution </ol> </h2>
                  <p>Noise pollution affects everyone, despite not being able to see or smell the pollution. Noise pollution happens when sounds made by industrial factories or planes reaches a very harmful sound. This can lead to hearing loss, stress-related illness, speech interference, and high blood pressure.</p>
             <h2> <ol> Water Pollution </ol> </h2>
-                 <p>Water pollution, like land pollution, causes parts of the water to become unusuable/undrinkable due to the water being poisonous to health. This can become a very serious problem soon if we do not fix it now because the world would become void of drinkable water.</p>
+                 <p>Water pollution, like land pollution, causes parts of the water on the earth to become unusuable/undrinkable due to the water now being poisonous to health. This can become a very serious problem soon if we do not fix it now because the world would become void of drinkable water.</p>
             
          </p>
           <p><a class="btn btn-default" href="index.html" role="button">Go back &raquo;</a></p>
