--- a/typesofpollution.html
+++ b/typesofpollution.html
@@ -38,9 +38,9 @@
            <h2>  <ol>Air Pollution</ol> </h2>
              <p> Air pollution is releasing poisonous gases into the air, which can cause the ozone layer to disappear if we do not do something about it. This is important because if the ozone layer disappears, dangerous solar ultraviolet (UV) rays to enter the atmostphere. This will greately increase the chance of getting skin cancer, and cause the skin to burn from the rays.</p>
             <h2> <ol>Land Pollution</ol> </h2>
-             <p>Land pollution causes parts of the usuable soil to become unusual due to poisonous and harmful chemicals. This can greately affect . </p>
+             <p>Land pollution causes parts of the usuable soil to become unusual due to poisonous and harmful chemicals. This can greately affect everyone, because without usuable land, it would become near impossible to grow and sustain food to survive. </p>
              <h2><ol>Light Pollution</h2></ol>
-             <p>Light pollution may not affect humans, but it affects nature. Light pollution is caused by placing many street lamps without the cone-shape, causing the natural hours to become disoriented. Some effects of light pollution include birds singing at unusual hours, plant's natural develpoement to become off-track, sea turtles -who use the starlight to go into the ocean-to go the wrong way, towards the sreetlights.
+             <p>Light pollution may not affect humans, but it affects nature. Light pollution is caused by placing many street lamps without the cone-shape lampshade, causing the natural hours to become disoriented. Some effects of light pollution include birds singing at unusual hours, plant's natural develpoement to become off-track, sea turtles -who use the starlight to go into the ocean-to go the wrong way, towards the sreetlights.
              <h2> <ol> Noise Pollution </ol> </h2>
                  <p>Noise pollution affects everyone, despite not being able to see or smell the pollution. Noise pollution happens when sounds made by industrial factories or planes reaches a very harmful sound. This can lead to hearing loss, stress-related illness, speech interference, and high blood pressure.</p>
             <h2> <ol> Water Pollution </ol> </h2>
